Updates Api Docs and tests
